--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
       font-family: 'Roboto', sans-serif;
       font-weight: bold;
       font-size: 21.5px;
+      color: #07c;
+    }
+    .topLinks{
+      color: black;
+      font-weight: normal;
+      opacity: 0.8;
     }
     .topCard{
       height: 35vh;
@@ -60,9 +66,6 @@
       line-height: 25px;
       color: #07c;
     }
-    .link:hover{
-      opacity: 0.8;
-    }
     .learningTask{
       border-radius: 50%;
       height: 100px;
@@ -80,11 +83,11 @@
       <span></span>
     </button>
     <ul class="navbar-menu">
-      <li class="link"><a href="#">Home</a></li>
-      <li class="link"><a href="#">Learning Tasks</a></li>
-      <li class="link"><a href="#">Notifications</a></li>
-      <li class="link"><a href="#">Reports</a></li>
-      <li class="link"><a href="#">Conferences</a></li>
+      <li class="link"><a href="#"><b class="topLinks">Home</b></a></li>
+      <li class="link"><a href="#"><b class="topLinks">Learning Tasks</b></a></li>
+      <li class="link"><a href="#"><b class="topLinks">Notifications</b></a></li>
+      <li class="link"><a href="#"><b class="topLinks">Reports</b></a></li>
+      <li class="link"><a href="#"><b class="topLinks">Conferences</b></a></li>
     </ul> 
   </div>
 </nav>
@@ -97,29 +100,29 @@
   </h1>
 </div>
 
-<div class="w3-panel w3-white w3-card w3-display-container" style="display: inline-block; margin: 5vh 2vw; height:48vh; width:40vw; border-radius: 12.5px;">
-    <p class="dayplanTitle" style="margin-bottom:35px; margin-top:29px;"><b>Tuesday 18th February</b></p>
-    <p style=" display: inline-block;">Maths</p> 
-    <p style="display: inline-block; margin-left:33.9vw;">C2</p>
-    <hr class="w3-border-grey" style="margin:auto;width:100%">
-    <p style=" display: inline-block;">Maths</p>
-    <p style="display: inline-block; margin-left:33.9vw;">C2</p>
-    <hr class="w3-border-grey" style="margin:auto;width:100%">
-    <p style=" display: inline-block;">Digital Media</p>
-    <p style="display: inline-block; margin-left:31.1vw;">S11</p>
-    <hr class="w3-border-grey" style="margin:auto;width:100%">
-    <p style=" display: inline-block;">Digital Media</p>
-    <p style="display: inline-block; margin-left:31.1vw;">S11</p>
-    <hr class="w3-border-grey" style="margin:auto;width:100%">
-    <p style=" display: inline-block;">English</p>
-    <p style=" display: inline-block; margin-left:33.4vw;">LIB</p>
-    <hr class="w3-border-grey" style="margin:auto;width:100%">
-    <p style=" display: inline-block;">Science</p>
-    <p style=" display: inline-block; margin-left:32.5vw;">DCL1</p>
-    <p class="w3-text-blue" style="margin-top:25px; margin-left:33.9vw;">VIEW MORE</p>
+<div class="w3-panel w3-white w3-card w3-display-container" style="display: inline-block; margin-top: 3vh; margin-right: 2vw; margin-left: 2vw; height:48vh; width:25.3vw; border-radius: 12.5px;">
+  <p class="dayplanTitle" style="margin-bottom:35px; margin-top:29px;"><b>Tuesday 18th February</b></p>
+  <p style=" display: inline-block;">Maths</p> 
+  <p style="display: inline-block; margin-left:20vw;">C2</p>
+  <hr class="w3-border-grey" style="margin:auto;width:100%">
+  <p style=" display: inline-block;">Maths</p>
+  <p style="display: inline-block; margin-left:20vw;">C2</p>
+  <hr class="w3-border-grey" style="margin:auto;width:100%">
+  <p style=" display: inline-block;">Digital Media</p>
+  <p style="display: inline-block; margin-left:17.3vw;">S11</p>
+  <hr class="w3-border-grey" style="margin:auto;width:100%">
+  <p style=" display: inline-block;">Digital Media</p>
+  <p style="display: inline-block; margin-left:17.3vw;">S11</p>
+  <hr class="w3-border-grey" style="margin:auto;width:100%">
+  <p style=" display: inline-block;">English</p>
+  <p style=" display: inline-block; margin-left:19.5vw;">LIB</p>
+  <hr class="w3-border-grey" style="margin:auto;width:100%">
+  <p style=" display: inline-block;">Science</p>
+  <p style=" display: inline-block; margin-left:18.7vw;">DCL1</p>
+  <p class="w3-text-blue" style="margin-top:25px; margin-left:19.1vw;">VIEW MORE</p>
 </div>
 
-<div class="w3-panel w3-white w3-card w3-display-container" style="display: inline-block; margin-top: 3vh; height:48vh; width:40vw; border-radius: 12.5px;">
+<div class="w3-panel w3-white w3-card w3-display-container" style="display: inline-block; margin-top: 3vh; margin-right: 2vw; height:48vh; width:40vw; border-radius: 12.5px;">
     <p class="dayplanTitle" style="margin-bottom:35px; margin-top:29px;"><b>Learning Tasks</b></p>
     <p style=" display: inline-block;">Maths</p> 
     <p style="display: inline-block; margin-left:33.9vw;">C2</p>
@@ -141,6 +144,26 @@
     <p class="w3-text-blue" style="margin-top:25px; margin-left:33.9vw;">VIEW MORE</p>
 </div>
 
+<div class="w3-panel w3-white w3-card w3-display-container" style="display: inline-block; margin-top: 3vh; height:48vh; width:25.3vw; border-radius: 12.5px;">
+  <p class="dayplanTitle" style="margin-bottom:35px; margin-top:29px;"><b>Notifications</b></p>
+  <p style=" display: inline-block;">Maths</p> 
+  <p style="display: inline-block;">C2</p>
+  <hr class="w3-border-grey" style="margin:auto;width:100%">
+  <p style=" display: inline-block;">Maths</p>
+  <p style="display: inline-block;">C2</p>
+  <hr class="w3-border-grey" style="margin:auto;width:100%">
+  <p style=" display: inline-block;">Digital Media</p>
+  <p style="display: inline-block;">S11</p>
+  <hr class="w3-border-grey" style="margin:auto;width:100%">
+  <p style=" display: inline-block;">Digital Media</p>
+  <p style="display: inline-block;">S11</p>
+  <hr class="w3-border-grey" style="margin:auto;width:100%">
+  <p style=" display: inline-block;">English</p>
+  <p style=" display: inline-block;">LIB</p>
+  <hr class="w3-border-grey" style="margin:auto;width:100%">
+  <p style=" display: inline-block;">Science</p>
+  <p style=" display: inline-block;">DCL1</p>
+  <p class="w3-text-blue" style="margin-top:25px; margin-left:1vw;">VIEW MORE</p>
 </div>
 
 </body>
