--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Compass Webapp</title>
-  <link rel="stylesheet" href="https://ryncmrfrd.github.io/compass/style.css" type="text/css" >
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
-<script  src="js/index.js"></script>
+<script  src="index.js"></script>
 
 <style>
     .compassWelcome{
