--- a/index.html
+++ b/index.html
@@ -74,9 +74,21 @@
     			</button>
   			</div>
 		</div>
+
+	<div class="BottomCard">
+		<button id="demo-menu-top-right" class="mdl-button mdl-js-button mdl-button--icon">
+  			<i class="material-icons">more_vert</i>
+		</button>
+
+		<ul class="mdl-menu mdl-menu--top-right mdl-js-menu mdl-js-ripple-effect" data-mdl-for="demo-menu-top-right">
+ 			<li class="mdl-menu__item">Some Action</li>
+  			<li class="mdl-menu__item">Another Action</li>
+  			<li disabled class="mdl-menu__item">Disabled Action</li>
+  			<li class="mdl-menu__item">Yet Another Action</li>
+		</ul>
+	</div>
       		
       	</div>
-
     </section>
 
     <section class="mdl-layout__tab-panel" id="scroll-tab-2">
@@ -96,6 +108,8 @@
     </section>
   </main>
 </div>
+
+
 </body>
 </html>
 
