--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 
-<body >
+<body onload="window.scrollTo(0, 0);">
     <article class="card large">
       <header>
         <span class="label label-fixed" style="font-size: 25px;">Compass for Web</span>
@@ -62,6 +62,15 @@
               </article>
             </div>
           </footer>
+        </article>
+
+        <article class="card">
+            <header>
+              <h3 style="margin-top: 10px;">Made by Ryan Comerford</h3><br>
+            </header>
+            <footer>
+              <a class="button inline" href="https://ryncmrfrd.me">ryncmrfrd.me</a>
+            </footer>
         </article>
 
 </body>
