--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <article class="card">
             <header>
-                <h1 class="inline" style="margin-top: 10px;"><span class="label label-normal inline">Today</span><b id="date"> If you see this then my "fetch date" code is broken.</b></h1>
+                <h1 class="inline" style="margin-top: 10px;"><span class="label label-normal inline">Today</span><b id="date"> If you see this then my "get date" code is broken. Sorry.</b></h1>
                 <script src="index.js"></script>
             </header>
             <footer>
